@@ -5,6 +5,7 @@
 	js : fixed IntMap for keys greater than 2^31 (#10316)
 	js : workaround to fix sourcemaps on Firefox in Windows (#10217)
 	hl : add clipboard support in hl 1.12 (#10320)
+	cs/java : fixed rest arguments for cases when only one argument is provided (#10315)
 
 2021-07-01 4.2.3:
 
